--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1545,10 +1545,10 @@
       <div style="display: flex; align-items: center; justify-content: flex-start; flex-wrap: wrap; gap: 8px;">
         <h3 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 0.5px; display: flex; align-items: center; gap: 10px; border-left: 5px solid #0c2340; padding-left: 20px; box-sizing: border-box;">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="flex-shrink: 0;"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline></svg>
-          <span style="word-break: keep-all;">TECHNICAL PERFORMANCE & OPERATIONAL REVIEW</span>
+          <span style="word-break: keep-all;">ACTIVE LOG (TECHNICAL / PERFORMANCE)</span>
         </h3>
         <p style="margin: 0; color: #806600; font-size: 13px; font-weight: 700; text-transform: uppercase; letter-spacing: 0.5px; word-break: keep-all;">
-          (ACTIVE PERFORMANCE CYCLE)
+          (ACTIVE CYCLE)
         </p>
       </div>
     </div>
@@ -1561,14 +1561,14 @@
     <div style="margin-top: 10px; background: #ffffff; padding: 20px 25px; border-radius: 18px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
       <h4 style="margin: 0 0 12px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
-        Summary (Tracking Scope)
+        Summary & Session Log
       </h4>
       <div style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
         <p style="margin: 0 0 12px 0;">
           <b>Performance Tracking & Metrics:</b> All competitive rounds are logged at the round level within the cumulative freshman-season dataset. Recorded variables include field-relative scoring position, round-level variance, and counting score designation.
         </p>
         <p style="margin: 0 0 12px 0;">
-          <b>Technical Documentation:</b> Round-level performance variables and scoring outputs are archived within the freshman-season data record. At the <b>Compadres Collegiate</b>, rounds at <b>Iberostar Playa Paraíso GC (Par 72)</b> concluded at <b>Even Par</b> relative to the field scoring average (77.10).
+          <b>Technical Session Log:</b> Round-level performance variables and scoring outputs are archived within the freshman-season data record. At the <b>Compadres Collegiate</b>, rounds at <b>Iberostar Playa Paraíso GC (Par 72)</b> concluded at <b>Even Par</b> relative to the field scoring average (77.10).
         </p>
         <p style="margin: 0;">
           <b>Scoring Record Summary:</b> Counting Score Rate is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season cumulative)</b>.
