--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png">
 <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/joshuahayoung/joshua-golf-official/main/images/joshua-hong-logo.png">
 
-<title>Joshua Hong | Korean-Mexican NCAA D1 Golfer | UTSA Official Site</title>
+<title>Joshua Hong | Korean-Mexican NCAA D1 Golfer | UTSA</title>
 <meta name="description" content="Official site of Joshua Hong, a Korean-Mexican NCAA Division I golfer at UTSA. Explore career records, tournament highlights, and latest media coverage.">
 <meta name="keywords" content="Joshua Hong Golf, Joshua Hong UTSA, 멕시코 골프 선수 자슈아 홍, 자슈아 홍 골프, Joshua Hong Mexico, NCAA D1 Golfer, UTSA Men's Golf">
 <link rel="canonical" href="https://www.joshuahonggolf.com/index.html">
