--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -376,9 +376,9 @@
           </div>
           
           <div style="text-align: center; flex: 1; min-width: 120px; border-left: 1px solid #eee; border-right: 1px solid #eee;">
-            <div style="font-size: 0.85em; color: #E31837; font-weight: 600; margin-bottom: 5px;">QUALIFIER 2</div>
-            <div style="font-size: 1.05em; font-weight: 600; color: #0c2340;">Feb 12 (Thur)</div>
-            <div style="font-size: 0.9em; color: #666; font-family: 'Montserrat', sans-serif;">1:00 PM</div>
+            <div style="font-size: 0.85em; color: #999; font-weight: 600; margin-bottom: 5px;">QUALIFIER 2</div>
+            <div style="font-size: 1.05em; font-weight: 600; color: #999;">Feb 12 (Thur)</div>
+            <div style="font-size: 0.9em; color: #ccc; font-family: 'Montserrat', sans-serif;">1:00 PM</div>
           </div>
 
           <div style="text-align: center; flex: 1; min-width: 120px;">
@@ -418,13 +418,13 @@
               <th style="width: 17.5%; padding: 15px; font-weight: 500; font-size: 0.9em; text-align: center;">To Par</th>
             </tr>
           </thead>
-         <tbody style="text-align: center; color: #333; font-family: 'Montserrat', sans-serif;">
+        <tbody style="text-align: center; color: #333; font-family: 'Montserrat', sans-serif;">
             <tr style="border-bottom: 1px solid #eee; background: rgba(12, 35, 64, 0.02);"><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">Feb 17, 2026</td>
               <td style="padding: 12px; border-right: 1px solid #eee; color: #888;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; 
                  font-family: 'Oswald', sans-serif;">TBD</td><td style="padding: 12px; color: #ccc;">--</td></tr>
             <tr style="border-bottom: 1px solid #eee; background: #fffaf0;"><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700;">Feb 12, 2026</td>
-              <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; 
-                 font-family: 'Oswald', sans-serif;">TBD</td><td style="padding: 12px; color: #ccc;">--</td></tr>
+              <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; 
+                 font-family: 'Oswald', sans-serif; font-size: 1.15em;">67</td><td style="padding: 12px; color: #E31837; font-weight: 700; font-size: 1.1em;">-5</td></tr>
             
             <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Feb 10, 2026</td>
               <td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; 
