--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -660,7 +660,7 @@
                                 `-----------------------`,
                                 `● WAGR Pwr: ${['230.8799', '232.6656', '129.0694', '360.1597', '806.3420', '145.6033'][i]}`,
                                 `● Earned: ${['5.3735', '4.9097', '3.3178', '3.1971', '6.1052', '6.5774'][i]}`,
-                                i === 5 ? `Rank ▲ 136` : null
+                                i === 5 ? `Rank ▲ 142` : null
                             ].filter(v => v !== null);
                         }
                     }
@@ -768,7 +768,7 @@
     </div>
     <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX | Par 72/6,701 yards</div>
     <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
-      Rank Impact: <span style="color: #e11d48;">▲</span> 136 | SG: 0.35 | Weighted Pts: 54.06<br>
+      Rank Impact: <span style="color: #e11d48;">▲</span> 142 | SG: 0.35 | Weighted Pts: 54.06<br>
       WAGR Pwr: 145.6033 / Pts: 6.5774
     </div>
     <div class="mobile-status-bar">
@@ -1234,7 +1234,9 @@
 
               </div>
 
-              <div style="font-size: 11px; color: #777; font-weight: 700;">WAGR Pwr: 360.1597 / Pts: 3.1971</div>
+              <div style="font-size: 11px; color: #777; font-weight: 700;margin-top: 2px;">
+                Rank Impact: <span style="color: #e11d48;">▼</span> 142 | SG: -4.15 | Weighted Pts: 17.54<br>
+                WAGR Pwr: 360.1597 / Pts: 3.1971</div>
 
               <div class="mobile-score-bar">
 
