--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -775,7 +775,7 @@
     </div>
     <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX | Par 72/6,701 yards</div>
     <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
-      Rank Impact: <span style="color: #e11d48;">▲</span> 142 | SG: 0.35 | Weighted Pts: 54.06<br>
+      Rank Impact: <span style="color:#16a34a;">▲</span> 142 | SG: 0.35 | Weighted Pts: 54.06<br>
       WAGR Pwr: 145.6033 / Pts: 6.5774
     </div>
     <div class="mobile-status-bar">
@@ -1379,7 +1379,7 @@
 
               </div>
               <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
-                Rank Impact: <span style="color: #e11d48;">▲</span> 38 | SG: -0.74 | Weighted Pts: 41.18<br>
+                Rank Impact: <span style="color: #16a34a;">▲</span> 38 | SG: -0.74 | Weighted Pts: 41.18<br>
                 WAGR Pwr: 230.8799 / Pts: 5.3735
               </div>
               
