--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -776,7 +776,7 @@
     <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX | Par 72/6,701 yards</div>
     <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
       Rank Impact: <span style="color:#16a34a;">▲</span> 142 | SG: 0.35 | Weighted Pts: 54.06<br>
-      WAGR Pwr: 145.6033 / Pts: 6.5774
+      WAGR Pwr: 145.6033 / Pts.Earned: 6.5774
     </div>
     <div class="mobile-status-bar">
       <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value" style="font-weight: 800;"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></span></div>
@@ -1151,7 +1151,7 @@
 
               </div>
 
-              <div style="font-size: 11px; color: #c98a2e; font-weight: 700; letter-spacing: -0.2px;">WAGR Pwr: 806.3420 / Pts: 6.1052</div>
+              <div style="font-size: 11px; color: #c98a2e; font-weight: 700; letter-spacing: -0.2px;">WAGR Pwr: 806.3420 / Pts.Earned: 6.1052</div>
 
               <div style="font-size: 11px; color: #475569; font-weight: 800; margin-top: 2px;">Head-to-Head: 42-37-5</div>
 
@@ -1243,7 +1243,7 @@
 
               <div style="font-size: 11px; color: #777; font-weight: 700;margin-top: 2px;">
                 Rank Impact: <span style="color: #e11d48;">▼</span> 142 | SG: -4.15 | Weighted Pts: 17.54<br>
-                WAGR Pwr: 360.1597 / Pts: 3.1971</div>
+                WAGR Pwr: 360.1597 / Pts.Earned: 3.1971</div>
 
               <div class="mobile-score-bar">
 
@@ -1289,7 +1289,7 @@
 
               <div style="font-size: 11px; color: #777; font-weight: 700;margin-top: 2px;">
                 Rank Impact: <span style="color: #e11d48;">▼</span> 51 | SG: -2.80 | Weighted Pts: 24.60<br>
-                WAGR Pwr: 129.0694 / Pts: 3.3178</div>
+                WAGR Pwr: 129.0694 / Pts.Earned: 3.3178</div>
               <div class="mobile-score-bar">
 
                 <div class="m-item"><span class="m-label">R1-R2-R3</span><span class="m-value"><span style="color:#e53935;">71-71</span>-76</span></div>
@@ -1333,7 +1333,7 @@
               </div>
               <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
                 Rank Impact: <span style="color: #e11d48;">▼</span> 10 | SG: -0.88 | Weighted Pts: 32.68<br>
-                WAGR Pwr: 232.6656 / Pts: 4.9097
+                WAGR Pwr: 232.6656 / Pts.Earned: 4.9097
               </div>  
               
 
@@ -1380,7 +1380,7 @@
               </div>
               <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
                 Rank Impact: <span style="color: #16a34a;">▲</span> 38 | SG: -0.74 | Weighted Pts: 41.18<br>
-                WAGR Pwr: 230.8799 / Pts: 5.3735
+                WAGR Pwr: 230.8799 / Pts.Earned: 5.3735
               </div>
               
               <div class="mobile-score-bar">
