--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -661,9 +661,9 @@
                                 `● WAGR Pwr: ${['230.8799', '232.6656', '129.0694', '360.1597', '806.3420', '145.6033'][i]}`,
                                 `● Pts.: ${['5.3735', '4.9097', '3.3178', '3.1971', '6.1052', '6.5774'][i]}`,
                                 [
-                                    `● Rank ▲ 38`,
-                                    `● Rank ▼ 10`,
-                                    `● Rank ▼ 51`,
+                                    `● Rank ▲ 151`,
+                                    `● Rank ▲ 28`,
+                                    `● Rank ▼ 38,
                                     `● Rank ▼ 98`,
                                     null,
                                     `● Rank ▲ 142`
@@ -1288,7 +1288,7 @@
               </div>
 
               <div style="font-size: 11px; color: #777; font-weight: 700;margin-top: 2px;">
-                Rank Impact: <span style="color: #e11d48;">▼</span> 51 | SG: -2.80 | Weighted Pts: 24.60<br>
+                Rank Impact: <span style="color: #e11d48;">▼</span> 38 | SG: -2.80 | Weighted Pts: 24.60<br>
                 WAGR Pwr: 129.0694 / Pts.: 3.3178</div>
               <div class="mobile-score-bar">
 
@@ -1332,7 +1332,7 @@
 
               </div>
               <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
-                Rank Impact: <span style="color: #e11d48;">▼</span> 10 | SG: -0.88 | Weighted Pts: 32.68<br>
+                Rank Impact: <span style="color: #16a34a;">▲</span> 28 | SG: -0.88 | Weighted Pts: 32.68<br>
                 WAGR Pwr: 232.6656 / Pts.: 4.9097
               </div>  
               
@@ -1379,7 +1379,7 @@
 
               </div>
               <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">
-                Rank Impact: <span style="color: #16a34a;">▲</span> 38 | SG: -0.74 | Weighted Pts: 41.18<br>
+                Rank Impact: <span style="color: #16a34a;">▲</span> 151 | SG: -0.74 | Weighted Pts: 41.18<br>
                 WAGR Pwr: 230.8799 / Pts.: 5.3735
               </div>
               
