--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -663,7 +663,7 @@
                                 [
                                     `● Rank ▲ 151`,
                                     `● Rank ▲ 28`,
-                                    `● Rank ▼ 38,
+                                    `● Rank ▼ 38`,
                                     `● Rank ▼ 98`,
                                     null,
                                     `● Rank ▲ 142`
