--- a/index.html
+++ b/index.html
@@ -1154,39 +1154,29 @@ gtag('config', 'G-H1JW8YBDZ8');
 <div style="max-width: 800px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
   <div style="background: #0c2340; padding: 35px 25px; border-radius: 25px; text-align: center; color: white; box-shadow: 0 12px 30px rgba(12, 35, 64, 0.2);">
-    <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 800; letter-spacing: 1.2px; text-transform: uppercase;">NIL & Brand Collaboration</h2>
-    <p style="font-size: 15.5px; color: rgba(255,255,255,0.9); line-height: 1.6; margin-bottom: 25px; max-width: 550px; margin-left: auto; margin-right: auto; word-break: keep-all;">
-      Joshua is committed to building long-term, value-driven relationships with brands that share his spirit of <b>excellence, discipline, and integrity</b>.
-    </p>
     
-<a href="javascript:void(0);" 
-   onclick="const u='joshuahayoung'; const d='hotmail.com'; window.location.href='mailto:'+u+'@'+d;" 
-   style="display: inline-flex; align-items: center; gap: 10px; padding: 15px 35px; background: #806600; color: #ffffff; text-decoration: none; border-radius: 10px; font-size: 14px; font-weight: 800; transition: all 0.3s ease; box-shadow: 0 5px 15px rgba(128, 102, 0, 0.3); border: none; cursor: pointer;">
-    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M22 2L11 13"></path>
-      <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
-    </svg>
-    <span style="letter-spacing: 0.5px; text-transform: uppercase;">Explore Partnership Opportunities</span>
-</a>
+    <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 800; letter-spacing: 1.2px; text-transform: uppercase;">
+      NIL & Compliance Overview
+    </h2>
 
-   <div style="background: rgba(255,255,255,0.06); padding: 20px; border-radius: 12px; text-align: left; margin-top: 30px; border: 1px solid rgba(255,255,255,0.1);">
-  <p style="font-size: 13px; color: rgba(255,255,255,0.8); line-height: 1.6; margin: 0; display: flex; align-items: flex-start; gap: 10px;">
-    <span style="flex-shrink: 0; display: flex; align-items: center; justify-content: center; margin-top: 2px;">
-      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
-        <line x1="12" y1="8" x2="12" y2="12"></line>
-        <line x1="12" y1="16" x2="12.01" y2="16"></line>
-      </svg>
-    </span>
-    <span>
-      <b style="color: #806600; display: block; margin-bottom: 4px; font-size: 13px; text-transform: uppercase; letter-spacing: 0.5px;">Compliance Note:</b>
-      As an international student-athlete on an F-1 visa, Joshua strictly adheres to NCAA and U.S. federal compliance guidelines. We specifically welcome inquiries from <b>international brands</b> (Mexico, South Korea) or opportunities structured as <b>licensing/passive income</b>.
-    </span>
-  </p>
-</div>
+    <p style="font-size: 15.5px; color: rgba(255,255,255,0.9); line-height: 1.6; margin-bottom: 20px; max-width: 550px; margin-left: auto; margin-right: auto;">
+      Joshua maintains eligibility and compliance with all NCAA regulations and university guidelines.
+    </p>
+
+    <div style="background: rgba(255,255,255,0.06); padding: 20px; border-radius: 12px; text-align: left; margin-top: 20px; border: 1px solid rgba(255,255,255,0.1);">
+      
+      <p style="font-size: 13px; color: rgba(255,255,255,0.8); line-height: 1.6; margin: 0;">
+        <b style="color: #806600; text-transform: uppercase; letter-spacing: 0.5px;">Compliance Note:</b><br><br>
+        As an international student-athlete on an F-1 visa, Joshua strictly adheres to NCAA and U.S. federal compliance standards. 
+        Any external support or partnership considerations are reviewed in accordance with institutional compliance procedures.
+      </p>
+
+    </div>
+
   </div>
 
 </div>
+
 
 
 
