--- a/index.html
+++ b/index.html
@@ -1154,9 +1154,9 @@ gtag('config', 'G-H1JW8YBDZ8');
 <div style="max-width: 800px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
   <div style="background: #0c2340; padding: 35px 25px; border-radius: 25px; text-align: center; color: white; box-shadow: 0 12px 30px rgba(12, 35, 64, 0.2);">
-    <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 800; letter-spacing: 1.2px; text-transform: uppercase;">NIL & Brand Collaboration</h2>
+    <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 800; letter-spacing: 1.2px; text-transform: uppercase;">NIL & Compliance Overview</h2>
     <p style="font-size: 15.5px; color: rgba(255,255,255,0.9); line-height: 1.6; margin-bottom: 25px; max-width: 550px; margin-left: auto; margin-right: auto; word-break: keep-all;">
-      Joshua is committed to building long-term, value-driven relationships with brands that share his spirit of <b>excellence, discipline, and integrity</b>.
+      Joshua maintains eligibility and compliance with <b>all NCAA regulations and university guidelines.</b>.
     </p>
     
    <div style="background: rgba(255,255,255,0.06); padding: 20px; border-radius: 12px; text-align: left; margin-top: 30px; border: 1px solid rgba(255,255,255,0.1);">
@@ -1170,7 +1170,8 @@ gtag('config', 'G-H1JW8YBDZ8');
     </span>
     <span>
       <b style="color: #806600; display: block; margin-bottom: 4px; font-size: 13px; text-transform: uppercase; letter-spacing: 0.5px;">Compliance Note:</b>
-      As an international student-athlete on an F-1 visa, Joshua strictly adheres to NCAA and U.S. federal compliance guidelines. We specifically welcome inquiries from <b>international brands</b> (Mexico, South Korea) or opportunities structured as <b>licensing/passive income</b>.
+      As an international student-athlete on an F-1 visa, Joshua strictly adheres to <b>NCAA and U.S. federal compliance standards</b>. 
+        Any external support or partnership considerations are reviewed in accordance with <b>institutional compliance procedures.</b>.
     </span>
   </p>
 </div>
