--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@ gtag('config', 'G-H1JW8YBDZ8');
   <div style="background: #0c2340; padding: 35px 25px; border-radius: 25px; text-align: center; color: white; box-shadow: 0 12px 30px rgba(12, 35, 64, 0.2);">
     <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 800; letter-spacing: 1.2px; text-transform: uppercase;">NIL & Compliance Overview</h2>
     <p style="font-size: 15.5px; color: rgba(255,255,255,0.9); line-height: 1.6; margin-bottom: 25px; max-width: 550px; margin-left: auto; margin-right: auto; word-break: keep-all;">
-      Joshua maintains eligibility and compliance with <b>all NCAA regulations and university guidelines.</b>.
+      Joshua maintains eligibility and compliance with <b>all NCAA regulations and university guidelines</b>.
     </p>
     
    <div style="background: rgba(255,255,255,0.06); padding: 20px; border-radius: 12px; text-align: left; margin-top: 30px; border: 1px solid rgba(255,255,255,0.1);">
@@ -1171,7 +1171,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     <span>
       <b style="color: #806600; display: block; margin-bottom: 4px; font-size: 13px; text-transform: uppercase; letter-spacing: 0.5px;">Compliance Note:</b>
       As an international student-athlete on an F-1 visa, Joshua strictly adheres to <b>NCAA and U.S. federal compliance standards</b>. 
-        Any external support or partnership considerations are reviewed in accordance with <b>institutional compliance procedures.</b>.
+        Any external support or partnership considerations are reviewed in accordance with <b>institutional compliance procedures</b>.
     </span>
   </p>
 </div>
