--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -637,7 +637,18 @@
             maintainAspectRatio: false,
             layout: { padding: { top: 30, bottom: 10, left: 0, right: 0 } },
             scales: {
-                y: { min: 65, max: 82, grid: { color: '#efefef', drawBorder: false }, ticks: { font: { size: 11, weight: '600' }, color: '#333' } },
+                y: { 
+                    min: 65, 
+                    max: 82, 
+                    grid: { color: '#efefef', drawBorder: false }, 
+                    ticks: { font: { size: 11, weight: '600' }, color: '#333' },
+                    title: {
+                        display: true,
+                        text: 'Strokes',
+                        color: '#333',
+                        font: { size: 12, weight: '700' }
+                    }
+                },
                 x: { grid: { display: false }, ticks: { color: '#333', font: { size: 10, weight: '500' } } }
             },
             plugins: {
