--- a/index.html
+++ b/index.html
@@ -1160,15 +1160,15 @@ gtag('config', 'G-H1JW8YBDZ8');
     </p>
     
    <div style="background: rgba(255,255,255,0.06); padding: 20px; border-radius: 12px; text-align: left; margin-top: 30px; border: 1px solid rgba(255,255,255,0.1);">
-  <p style="font-size: 13px; color: rgba(255,255,255,0.8); line-height: 1.6; margin: 0; display: flex; align-items: flex-start; gap: 10px;">
-    <span style="flex-shrink: 0; display: flex; align-items: center; justify-content: center; margin-top: 2px;">
+  <p style="font-size: 13px; color: rgba(255,255,255,0.8); line-height: 1.6; margin: 0; display: flex; flex-direction: row; align-items: flex-start; gap: 12px;">
+    <span style="flex-shrink: 0; display: inline-flex; align-items: center; justify-content: center; padding-top: 2px;">
       <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
         <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
         <line x1="12" y1="8" x2="12" y2="12"></line>
         <line x1="12" y1="16" x2="12.01" y2="16"></line>
       </svg>
     </span>
-    <span>
+    <span style="flex: 1; display: block;">
       <b style="color: #806600; display: block; margin-bottom: 4px; font-size: 13px; text-transform: uppercase; letter-spacing: 0.5px;">Compliance Note:</b>
       As an international student-athlete on an F-1 visa, Joshua strictly adheres to NCAA and U.S. federal compliance standards. 
       Any external support is reviewed through proper institutional compliance procedures.
