--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@ gtag('config', 'G-H1JW8YBDZ8');
   <div style="background: #0c2340; padding: 35px 25px; border-radius: 25px; text-align: center; color: white; box-shadow: 0 12px 30px rgba(12, 35, 64, 0.2);">
     <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 800; letter-spacing: 1.2px; text-transform: uppercase;">NIL & Compliance Overview</h2>
     <p style="font-size: 15.5px; color: rgba(255,255,255,0.9); line-height: 1.6; margin-bottom: 25px; max-width: 550px; margin-left: auto; margin-right: auto; word-break: keep-all;">
-      Joshua maintains full eligibility in accordance with NCAA regulations and university guidelines.
+      Joshua maintains full NCAA eligibility and adheres strictly to all university and federal compliance standards.
     </p>
     
    <div style="background: rgba(255,255,255,0.06); padding: 20px; border-radius: 12px; text-align: left; margin-top: 30px; border: 1px solid rgba(255,255,255,0.1);">
