--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1424,34 +1424,35 @@
 
     </div>
 
-  </div>
 
-</div>
+    <div style="margin-top: 15px; border-radius: 12px; background: #ffffff; border: 1px solid #eee; padding: 18px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
+      <div style="display: flex; align-items: flex-start; gap: 12px;">
+        <div style="flex-shrink: 0; margin-top: 2px;">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#16a34a" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+            <circle cx="12" cy="12" r="10"></circle>
+            <line x1="12" y1="16" x2="12" y2="12"></line>
+            <line x1="12" y1="8" x2="12.01" y2="8"></line>
+          </svg>
+        </div>
+        <div style="flex-grow: 1;">
+          <h5 style="margin: 0 0 8px 0; color: #0c2340; font-size: 14px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">Cumulative Performance Analysis</h5>
+          <p style="margin: 0; font-size: 13px; color: #444; line-height: 1.6; word-break: keep-all;">
+            Based on the 15-round cumulative dataset, Joshua accounted for <strong style="color: #16a34a; font-weight: 800;">32.79%</strong> (171.48 pts) of the total team points (522.84). This metric isolates absolute contribution to team scoring, providing an objective assessment of his impact across the fall season while normalizing round-by-round variance.
+          </p>
+        </div>
+      </div>
+    </div>
 
-
-<div style="background: #0c2340; padding: 35px 25px; border-radius: 25px; text-align: center; color: white; box-shadow: 0 12px 30px rgba(12, 35, 64, 0.2);">
-    <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 800; letter-spacing: 1.2px; text-transform: uppercase;">NIL & Compliance Overview</h2>
-    <p style="font-size: 15.5px; color: rgba(255,255,255,0.9); line-height: 1.6; margin-bottom: 25px; max-width: 550px; margin-left: auto; margin-right: auto; word-break: keep-all;">
-      Joshua maintains full eligibility in accordance with NCAA regulations and university guidelines.
-    </p>
     
-   <div style="background: rgba(255,255,255,0.06); padding: 20px; border-radius: 12px; text-align: left; margin-top: 30px; border: 1px solid rgba(255,255,255,0.1);">
-  <p style="font-size: 13px; color: rgba(255,255,255,0.8); line-height: 1.6; margin: 0; display: flex; flex-direction: row; align-items: flex-start; gap: 12px;">
-    <span style="flex-shrink: 0; display: inline-flex; align-items: center; justify-content: center; padding-top: 2px;">
-      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
-        <line x1="12" y1="8" x2="12" y2="12"></line>
-        <line x1="12" y1="16" x2="12.01" y2="16"></line>
-      </svg>
-    </span>
-    <span style="flex: 1; display: block;">
-      <b style="color: #806600; display: block; margin-bottom: 4px; font-size: 13px; text-transform: uppercase; letter-spacing: 0.5px;">Compliance Note:</b>
-      As an international student-athlete on an F-1 visa, Joshua strictly adheres to NCAA and U.S. federal compliance standards. 
-      Any external support is reviewed through proper institutional compliance procedures.
-    </span>
-  </p>
-</div>
+    
   </div>
+
+</div>
+
+
+
+
+  
 
 
 <div class="analysis-section" style="max-width: 900px; margin: 0 auto 50px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
