--- a/index.html
+++ b/index.html
@@ -1168,10 +1168,9 @@ gtag('config', 'G-H1JW8YBDZ8');
         <line x1="12" y1="16" x2="12.01" y2="16"></line>
       </svg>
     </span>
-    <span style="flex: 1; display: block;">
+    <span style="flex: 1; display: block; min-width: 0;">
       <b style="color: #806600; display: block; margin-bottom: 4px; font-size: 13px; text-transform: uppercase; letter-spacing: 0.5px;">Compliance Note:</b>
-      As an international student-athlete on an F-1 visa, Joshua strictly adheres to NCAA and U.S. federal compliance standards. 
-      Any external support is reviewed through proper institutional compliance procedures.
+      As an international student-athlete on an F-1 visa, Joshua follows all NCAA and institutional guidelines. Any external support or NIL-related activity is evaluated in accordance with university compliance policies and long-term academic and athletic priorities.
     </span>
   </p>
 </div>
