--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1430,14 +1430,13 @@
         <div style="flex-shrink: 0; margin-top: 2px;">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#16a34a" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
             <circle cx="12" cy="12" r="10"></circle>
-            <line x1="12" y1="16" x2="12" y2="12"></line>
-            <line x1="12" y1="8" x2="12.01" y2="8"></line>
+            <polyline points="12 6 12 12 16 14"></polyline>
           </svg>
         </div>
         <div style="flex-grow: 1;">
-          <h5 style="margin: 0 0 8px 0; color: #0c2340; font-size: 14px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">Cumulative Performance Analysis</h5>
+          <h5 style="margin: 0 0 8px 0; color: #0c2340; font-size: 14px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">Data Point Note</h5>
           <p style="margin: 0; font-size: 13px; color: #444; line-height: 1.6; word-break: keep-all;">
-            Based on the 15-round cumulative dataset, Joshua accounted for <strong style="color: #16a34a; font-weight: 800;">32.79%</strong> (171.48 pts) of the total team points (522.84). This metric isolates absolute contribution to team scoring, providing an objective assessment of his impact across the fall season while normalizing round-by-round variance.
+            Rank Impact and Weighted Pts are recorded <strong style="color: #16a34a; font-weight: 800;">at the time of the event conclusion</strong> as reported by Clippd/WAGR. Current live rankings may vary due to the system's <strong style="color: #16a34a; font-weight: 800;">dynamic recalibration</strong>.
           </p>
         </div>
       </div>
