--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1436,7 +1436,7 @@
         <div style="flex-grow: 1;">
           <h5 style="margin: 0 0 8px 0; color: #0c2340; font-size: 14px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">Data Point Note</h5>
           <p style="margin: 0; font-size: 13px; color: #444; line-height: 1.6; word-break: keep-all;">
-            Rank Impact and Weighted Pts are recorded <strong style="color: #16a34a; font-weight: 800;">at the time of the event conclusion as reported by Clippd/WAGR. Current live rankings may vary due to the system's <strong style="color: #16a34a; font-weight: 800;">dynamic recalibration.
+            Rank Impact and Weighted Pts are recorded <span style="color: #16a34a;">at the time of the event conclusion</span> as reported by Clippd/WAGR. Current live rankings may vary due to the system's <span style="color: #16a34a;">dynamic recalibration</span>.
           </p>
         </div>
       </div>
