--- a/index.html
+++ b/index.html
@@ -869,8 +869,12 @@ gtag('config', 'G-H1JW8YBDZ8');
   </p>
   
   <p style="font-size: 16.5px; margin-bottom: 20px; line-height: 1.8; color: #4a5568;">
-    Since entering collegiate competition in 2025, his development has focused on adapting to the performance demands of NCAA play through structured training and competitive evaluation within the collegiate environment.
-  </p>
+  Since entering collegiate competition in 2025, his training and tournament participation have been conducted within the UTSA men’s golf program under 
+  <a href="https://goutsa.com/sports/mens-golf/roster/season/2025-26/staff/matt-wernecke" target="_blank" style="color: #4a5568; text-decoration: none; border-bottom: 1px solid #cbd5e0; font-weight: 500; transition: all 0.2s;" onmouseover="this.style.color='#2d3748'; this.style.borderBottomColor='#2d3748';" onmouseout="this.style.color='#4a5568'; this.style.borderBottomColor='#cbd5e0';">
+    Head Coach Matt Wernecke
+  </a> 
+  and the UTSA coaching staff, in alignment with NCAA Division I competitive standards.
+</p>
 
   <div style="background: white; padding: 25px; border-radius: 15px; border-left: 5px solid #3182ce; margin-top: 25px; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
     <p style="font-size: 16.5px; line-height: 1.8; color: #2d3748; margin: 0;">
