--- a/index.html
+++ b/index.html
@@ -868,21 +868,20 @@ gtag('config', 'G-H1JW8YBDZ8');
     <span style="font-weight: 900; font-size: 22px; color: #0c2340; border-bottom: 3px solid #cbd5e0; padding-bottom: 2px;">Joshua Hong</span> (b. 2007) is a <b>Korean-Mexican</b> golfer competing for the <b>University of Texas at San Antonio (UTSA)</b> in <b>NCAA Division I</b>.
   </p>
   
-  <p style="font-size: 16.5px; margin-bottom: 20px; line-height: 1.8; color: #4a5568;">
+ <p style="font-size: 16.5px; margin-bottom: 20px; line-height: 1.8; color: #4a5568;">
   Since entering collegiate competition in 2025, his training and tournament participation have been conducted within the UTSA men’s golf program under 
   <a href="https://goutsa.com/sports/mens-golf/roster/season/2025-26/staff/matt-wernecke" target="_blank" style="color: #4a5568; text-decoration: none; border-bottom: 1px solid #cbd5e0; font-weight: 500; transition: all 0.2s;" onmouseover="this.style.color='#2d3748'; this.style.borderBottomColor='#2d3748';" onmouseout="this.style.color='#4a5568'; this.style.borderBottomColor='#cbd5e0';">
     Head Coach Matt Wernecke
   </a> 
-  and the UTSA coaching staff, in alignment with NCAA Division I competitive standards.
+  and the UTSA coaching staff, in alignment with NCAA Division I competition.
 </p>
 
   <div style="background: white; padding: 25px; border-radius: 15px; border-left: 5px solid #3182ce; margin-top: 25px; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box;">
     <p style="font-size: 16.5px; line-height: 1.8; color: #2d3748; margin: 0;">
-      Through five events (four Fall, one Spring), Joshua recorded a 
-      <span style="color: #2b6cb0; font-weight: 800; font-size: 18px; background: rgba(43, 108, 176, 0.05); padding: 2px 6px; border-radius: 4px;">71.0 Adj. Scoring Average</span>. 
-      Alongside an 
-      <span style="color: #10b981; font-weight: 800; font-size: 18px; background: rgba(16, 185, 129, 0.05); padding: 2px 6px; border-radius: 4px;">Academic GPA of 3.4</span>, 
-      his profile reflects a steady, process-driven approach to student-athlete development.
+      Through five events (four Fall, one Spring), he recorded a 
+      <span style="color: #2b6cb0; font-weight: 800; font-size: 18px; background: rgba(43, 108, 176, 0.05); padding: 2px 6px; border-radius: 4px;">71.0 Adjusted Scoring Average</span>. 
+      His academic record includes a 
+      <span style="color: #10b981; font-weight: 800; font-size: 18px; background: rgba(16, 185, 129, 0.05); padding: 2px 6px; border-radius: 4px;">3.4 GPA (Fall 2025)</span>.
     </p>
   </div>
 </div>
