--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1616,16 +1616,16 @@
         Summary & Session Log
       </h4>
       <div style="margin: 0; font-size: 14px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-  <p style="margin: 0 0 12px 0;">
-    <b>Performance Tracking & Metrics:</b> All competitive rounds are logged at the round level within the cumulative freshman-season dataset. Recorded variables include field-relative scoring position, round-level variance, and counting score designation.
-  </p>
-  <p style="margin: 0 0 12px 0;">
-    <b>Program Structure & Event Record:</b> Training and tournament preparation are conducted within the UTSA men’s golf program under the UTSA coaching staff. At the <b>Compadres Collegiate</b>, rounds at <b>Iberostar Playa Paraíso GC (Par 72)</b> concluded at <b>Even Par</b> relative to the field scoring average (77.10).
-  </p>
-  <p style="margin: 0;">
-    <b>Scoring Record Summary:</b> Counting Score Rate is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season cumulative)</b>.
-  </p>
-</div>
+        <p style="margin: 0 0 12px 0;">
+          <b>Performance Tracking & Metrics:</b> All competitive rounds are logged at the round level within the cumulative freshman-season dataset. Recorded variables include field-relative scoring position, round-level variance, and counting score designation.
+        </p>
+        <p style="margin: 0 0 12px 0;">
+          <b>Program Structure & Event Record:</b> Training and tournament participation take place within the UTSA men’s golf program under the UTSA coaching staff. At the <b>Compadres Collegiate</b>, rounds at <b>Iberostar Playa Paraíso GC (Par 72)</b> concluded at <b>Even Par</b> relative to the field scoring average (77.10).
+        </p>
+        <p style="margin: 0;">
+          <b>Scoring Record Summary:</b> Counting Score Rate is documented at <b>100% (3/3 rounds — event)</b> and <b>93.3% (14/15 rounds — freshman season cumulative)</b>.
+        </p>
+      </div>
     </div>
 
     <div style="margin-top: 14px; background: #ffffff; padding: 22px 25px; border-radius: 12px; border: 1px solid #edf2f7; box-shadow: 0 4px 12px rgba(0,0,0,0.03); box-sizing: border-box; width: 100%;">
@@ -1634,25 +1634,24 @@
         <div style="font-size: 12px; color: #0c2340; font-weight: 900; text-transform: uppercase; letter-spacing: 1.2px;">Technical Session Log — <a href="https://www.bryangathrightgolf.com/" target="_blank" style="color: #0c2340; text-decoration: underline;">Coach Bryan Gathright</a></div>
       </div>
       <div style="font-size: 13px; color: #4a5568; line-height: 1.7; text-align: justify; word-break: keep-all;">
-  <p style="margin: 0 0 12px 0;">
-    Spring 2026 preparation is conducted within the competitive structure of the UTSA men’s golf program under Head Coach 
-    <a href="https://goutsa.com/sports/mens-golf/roster/season/2025-26/staff/matt-wernecke" target="_blank" style="color: inherit; text-decoration: underline; font-weight: 600;">
-      Matt Wernecke
-    </a>, with individual technical work aligned to team qualifying and tournament schedules.
-  </p>
-  <ul style="margin: 0; padding-left: 18px; list-style-type: disc;">
-    <li style="margin-bottom: 8px;">
-      A technical session was conducted focusing on <b>driver and long-iron dispersion control</b>. Emphasis was placed on narrowing dispersion patterns and stabilizing scoring variance during qualifying play.
-    </li>
-    <li style="margin-bottom: 12px;">
-      Competitive margin differentials from recent qualifying rounds were reviewed in the context of scoring efficiency and gap management.
-    </li>
-  </ul>
-  <div style="background: #fff9f2; padding: 12px 15px; border-radius: 8px; border-left: 4px solid #f15a22; margin-top: 10px;">
-    <b style="color: #c53030; font-size: 11px; text-transform: uppercase; letter-spacing: 0.5px;">Strength & Conditioning Note:</b><br>
-    Heavy barbell-based lifting protocols were advised against during the current technical recalibration phase, due to potential effects on swing mechanics, distance efficiency, and dispersion consistency.
-  </div>
-</div>
+        <p style="margin: 0 0 12px 0;">
+          Selected individual technical sessions are conducted with Coach Bryan Gathright.
+        </p>
+        <ul style="margin: 0; padding-left: 18px; list-style-type: disc;">
+          <li style="margin-bottom: 8px;">
+            A session focused on <b>driver and long-iron dispersion control</b> was conducted. Dispersion patterns and qualifying-round scoring gaps were reviewed for reference.
+          </li>
+          <li style="margin-bottom: 12px;">
+            Competitive margin differentials from recent qualifying rounds were reviewed for reference.
+          </li>
+        </ul>
+        <div style="background: #fff9f2; padding: 12px 15px; border-radius: 8px; border-left: 4px solid #f15a22; margin-top: 10px;">
+          <b style="color: #c53030; font-size: 11px; text-transform: uppercase; letter-spacing: 0.5px;">Strength & Conditioning Note:</b><br>
+          Heavy barbell-based lifting protocols were not utilized during the current preparation period due to potential effects on swing mechanics and dispersion control.
+        </div>
+      </div>
+
+
 
     </div>
   </div>
