--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1639,10 +1639,10 @@
         </p>
         <ul style="margin: 0; padding-left: 18px; list-style-type: disc;">
           <li style="margin-bottom: 8px;">
-            A session focused on <b>driver and long-iron dispersion control</b> was conducted. Dispersion patterns and qualifying-round scoring gaps were reviewed for reference.
+            A session focused on <b>driver and long-iron dispersion control</b> was conducted. Dispersion patterns and qualifying-round scoring gaps were reviewed.
           </li>
           <li style="margin-bottom: 12px;">
-            Competitive margin differentials from recent qualifying rounds were reviewed for reference.
+            Margin differentials from recent qualifying rounds were recorded for reference.
           </li>
         </ul>
         <div style="background: #fff9f2; padding: 12px 15px; border-radius: 8px; border-left: 4px solid #f15a22; margin-top: 10px;">
