--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1635,7 +1635,7 @@
       </div>
       <div style="font-size: 13px; color: #4a5568; line-height: 1.7; text-align: justify; word-break: keep-all;">
         <p style="margin: 0 0 12px 0;">
-          Selected individual technical sessions are conducted with Coach Bryan Gathright.
+          Individual technical sessions are conducted with Coach Bryan Gathright.
         </p>
         <ul style="margin: 0; padding-left: 18px; list-style-type: disc;">
           <li style="margin-bottom: 8px;">
