--- a/index.html
+++ b/index.html
@@ -1173,9 +1173,10 @@ gtag('config', 'G-H1JW8YBDZ8');
       </svg>
     </span>
     <span style="flex: 1; display: block; min-width: 0;">
-      <b style="color: #806600; display: block; margin-bottom: 4px; font-size: 13px; text-transform: uppercase; letter-spacing: 0.5px;">Compliance Note:</b>
-      As an international student-athlete on an F-1 visa, Joshua follows all NCAA and institutional guidelines. Any external support or NIL-related activity is evaluated in accordance with university compliance policies and long-term academic and athletic priorities.
-    </span>
+  <b style="color: #806600; display: block; margin-bottom: 4px; font-size: 13px; text-transform: uppercase; letter-spacing: 0.5px;">Compliance Note:</b>
+  As an international student-athlete (F-1 visa), Joshua maintains full NCAA eligibility and operates in accordance with all university and conference regulations. NIL-related opportunities are considered in alignment with institutional compliance policies and academic and athletic commitments.
+</span>
+
   </p>
 </div>
   </div>
