--- a/index.html
+++ b/index.html
@@ -1160,7 +1160,7 @@ gtag('config', 'G-H1JW8YBDZ8');
   <div style="background: #0c2340; padding: 35px 25px; border-radius: 25px; text-align: center; color: white; box-shadow: 0 12px 30px rgba(12, 35, 64, 0.2);">
     <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 800; letter-spacing: 1.2px; text-transform: uppercase;">NIL & Compliance Overview</h2>
     <p style="font-size: 15.5px; color: rgba(255,255,255,0.9); line-height: 1.6; margin-bottom: 25px; max-width: 550px; margin-left: auto; margin-right: auto; word-break: keep-all;">
-      Joshua maintains full NCAA eligibility and adheres strictly to all university and federal compliance standards.
+      Joshua maintains full NCAA eligibility and operates in accordance with all university, conference, and federal regulations.
     </p>
     
    <div style="background: rgba(255,255,255,0.06); padding: 20px; border-radius: 12px; text-align: left; margin-top: 30px; border: 1px solid rgba(255,255,255,0.1);">
@@ -1174,7 +1174,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     </span>
     <span style="flex: 1; display: block; min-width: 0;">
   <b style="color: #806600; display: block; margin-bottom: 4px; font-size: 13px; text-transform: uppercase; letter-spacing: 0.5px;">Compliance Note:</b>
-  As an international student-athlete (F-1 visa), Joshua maintains full NCAA eligibility and operates in accordance with all university and conference regulations. NIL-related opportunities are considered in alignment with institutional compliance policies and academic and athletic commitments.
+  As an international student-athlete (F-1 visa), NIL-related opportunities are considered in alignment with institutional compliance policies and academic and athletic commitments..
 </span>
 
   </p>
