--- a/index.html
+++ b/index.html
@@ -1174,7 +1174,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     </span>
     <span style="flex: 1; display: block; min-width: 0;">
   <b style="color: #806600; display: block; margin-bottom: 4px; font-size: 13px; text-transform: uppercase; letter-spacing: 0.5px;">Compliance Note:</b>
-  As an international student-athlete (F-1 visa), NIL-related opportunities are considered in alignment with institutional compliance policies and academic and athletic commitments..
+  As an international student-athlete (F-1 visa), NIL-related opportunities are considered in alignment with institutional compliance policies and academic and athletic commitments.
 </span>
 
   </p>
